Fixed help text rendering on mobile

--- a/web/sass-files/sass/partials/_get-link.scss
+++ b/web/sass-files/sass/partials/_get-link.scss
@@ -1,6 +1,6 @@
 .copy-link-confirm {
+	position: fixed;
 	color: rgb(153, 230, 153);
-	margin-top: -27px;
-	margin-bottom: -25px;
-	margin-right: 300px;
+	top: 84%;
+	left: 130px;
 }
